Estudie los identificadores, la especificidad en css, anidar etiquetas en CSS, y colores

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <header>
-            <h1>Tienda Muebles</h1>
+            <h1>Tienda <span>Muebles</span></h1>
         </header>
 
-        <nav>
+        <nav id="navegacion">
             <a href="index.html">Inicio</a>
             <a href="nosotros.html">Nosotros</a>
             <a href="tienda.html">Tienda</a>
@@ -23,7 +23,7 @@
         </nav>
 
         <section>
-            <h2>Categorías de Productos</h2>
+            <h2>Categorías de<span> Productos</span></h2>
             <div>
                 <img src="img/categoria1.jpg" alt="Imagen Oficina"/>
                 <a href="#">Oficina</a>
@@ -124,7 +124,7 @@
         <footer>
             <div>
                 <h3>Categorias</h3>
-                <nav>
+                <nav id="navegacion">
                     <a href="">Cocina</a>
                     <a href="">Oficina</a>
                     <a href="">Jardin</a>
@@ -134,7 +134,7 @@
             </div>
             <div>
                 <h3>Sobre nosotros</h3>
-                <nav>
+                <nav class="navegacion">
                     <a href="">Nuestra historía</a>
                     <a href="">Misión, Visíon y Valores</a>
                     <a href="">Carreras</a>
@@ -144,7 +144,7 @@
             </div>
             <div>
                 <h3>Soporte</h3>
-                <nav>
+                <nav class="navegacion">
                     <a href="">Preguntas Frecuentes</a>
                     <a href="">Ayuda en line</a>
                     <a href="">Confianza y seguridad</a>               
