--- a/index.html
+++ b/index.html
@@ -26,19 +26,21 @@
         
         <div class="hero"></div>
 
-        <section>
+        <section class="contenedor">
             <h2>Categorías de<span> Productos</span></h2>
-            <div>
-                <img src="img/categoria1.jpg" alt="Imagen Oficina"/>
-                <a href="#">Oficina</a>
-            </div>
-            <div>
-                <img src="img/categoria2.jpg" alt="Imagen Hogar"/>
-                <a href="#">Hogar</a>
-            </div>
-            <div>
-                <img src="img/categoria2.jpg" alt="Imagen Cocina"/>
-                <a href="#">Cocina</a>
+            <div class="listado-categorias">
+                <div>
+                    <img src="img/categoria1.jpg" alt="Imagen Oficina"/>
+                    <a href="#">Oficina</a>
+                </div>
+                <div>
+                    <img src="img/categoria2.jpg" alt="Imagen Hogar"/>
+                    <a href="#">Hogar</a>
+                </div>
+                <div>
+                    <img src="img/categoria2.jpg" alt="Imagen Cocina"/>
+                    <a href="#">Cocina</a>
+                </div>
             </div>
         </section>
 
