se maqueto la parte de nosotros y se comenzo el grid de nuestros productos

--- a/index.html
+++ b/index.html
@@ -47,89 +47,100 @@
     </section>
 
     <section class="sobre-nosotros">
-      <div class="contenedor">
-        <h2>Sobre Nosotros</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nulla
-          laboriosam quae eaque, illum itaque nostrum? Aut, perferendis?
-          Cupiditate mollitia, culpa expedita corrupti accusantium non excepturi
-          natus nulla explicabo rerum.
-        </p>
+      <div class="contenedor sobre-nosotros-grid">
+        <div class="texto-nosotros">
+          <h2>Sobre Nosotros</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nulla
+            laboriosam quae eaque, illum itaque nostrum? Aut, perferendis?
+            Cupiditate mollitia, culpa expedita corrupti accusantium non excepturi
+            natus nulla explicabo rerum.
+          </p>
+        </div>
+        
       </div>
     </section>
 
-    <main>
-      <h2>Nuestros productos</h2>
-      <div>
-        <img src="img/producto1.jpg" alt="producto 1" />
-        <div>
-          <h3>Producto 1</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            doloremque modi quo aliquam impedit, reiciendis provident
-          </p>
-          <p>$1,000.00</p>
-          <a href="#">Agregar al carrito</a>
+    <main class="contenido-principal contenedor">
+      <h2 class="text-center">Nuestros productos</h2>
+      <div class="listado-productos">
+        <div class="producto">
+          <img src="img/producto1.jpg" alt="producto 1" />
+          <div class="texto-producto">
+            <h3>Producto 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+              doloremque modi quo aliquam impedit, reiciendis provident
+            </p>
+            <p class="precio">$1,000.00</p>
+            <a class="btn" href="#">Agregar al carrito</a>
+          </div>
         </div>
-      </div>
-      <div>
-        <img src="img/producto2.jpg" alt="producto 2" />
-        <div>
-          <h3>Producto 2</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            doloremque modi quo aliquam impedit, reiciendis provident
-          </p>
-          <p>$1,000.00</p>
-          <a href="#">Agregar al carrito</a>
+
+        <div class="producto">
+            <img src="img/producto2.jpg" alt="producto 1" />
+            <div class="texto-producto"> 
+              <h3>Producto 2</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                doloremque modi quo aliquam impedit, reiciendis provident
+              </p>
+              <p class="precio">$1,000.00</p>
+              <a class="btn" href="#">Agregar al carrito</a>
+            </div>
+          </div>
+
+          <div>
+            <div class="producto">
+              <img src="img/producto3.jpg" alt="producto 1" />
+              <div class="texto-producto">
+                <h3>Producto 3</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                  doloremque modi quo aliquam impedit, reiciendis provident
+                </p>
+                <p class="precio">$1,000.00</p>
+                <a class="btn" href="#">Agregar al carrito</a>
+              </div>
+            </div>
+          </div>
+          <div class="producto">
+            <img src="img/producto4.jpg" alt="producto 1" />
+            <div class="texto-producto">
+              <h3>Producto 4</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                doloremque modi quo aliquam impedit, reiciendis provident
+              </p>
+              <p class="precio">$1,000.00</p>
+              <a class="btn" href="#">Agregar al carrito</a>
+            </div>
+          </div>
+
+         <div class="producto">
+          <img src="img/producto5.jpg" alt="producto 1" />
+          <div class="texto-producto">
+            <h3>Producto 5</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+              doloremque modi quo aliquam impedit, reiciendis provident
+            </p>
+            <p class="precio">$1,000.00</p>
+            <a class="btn" href="#">Agregar al carrito</a>
+          </div>
         </div>
-      </div>
-      <div>
-        <img src="img/producto3.jpg" alt="producto 3" />
-        <div>
-          <h3>Producto 3</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            doloremque modi quo aliquam impedit, reiciendis provident
-          </p>
-          <p>$1,000.00</p>
-          <a href="#">Agregar al carrito</a>
-        </div>
-      </div>
-      <div>
-        <img src="img/producto4.jpg" alt="producto 4" />
-        <div>
-          <h3>Producto 4</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            doloremque modi quo aliquam impedit, reiciendis provident
-          </p>
-          <p>$1,000.00</p>
-          <a href="#">Agregar al carrito</a>
-        </div>
-      </div>
-      <div>
-        <img src="img/producto5.jpg" alt="producto 5" />
-        <div>
-          <h3>Producto 5</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            doloremque modi quo aliquam impedit, reiciendis provident
-          </p>
-          <p>$1,000.00</p>
-          <a href="#">Agregar al carrito</a>
-        </div>
-      </div>
-      <div>
-        <img src="img/producto6.jpg" alt="producto 6" />
-        <div>
-          <h3>Producto 6</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            doloremque modi quo aliquam impedit, reiciendis provident
-          </p>
-          <p>$1,000.00</p>
-          <a href="#">Agregar al carrito</a>
+
+        <div class="producto">
+          <img src="img/producto6.jpg" alt="producto 1" />
+          <div class="texto-producto">
+            <h3>Producto 6</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+              doloremque modi quo aliquam impedit, reiciendis provident
+            </p>
+            <p class="precio">$1,000.00</p>
+            <a class="btn" href="#">Agregar al carrito</a>
+          </div>
         </div>
       </div>
     </main>
