--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aprendiendo html</title>
+    <title>Tienda de muebles</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -88,26 +88,12 @@
               <p class="precio">$1,000.00</p>
               <a class="btn" href="#">Agregar al carrito</a>
             </div>
-          </div>
-
-          <div>
-            <div class="producto">
-              <img src="img/producto3.jpg" alt="producto 1" />
-              <div class="texto-producto">
-                <h3>Producto 3</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-                  doloremque modi quo aliquam impedit, reiciendis provident
-                </p>
-                <p class="precio">$1,000.00</p>
-                <a class="btn" href="#">Agregar al carrito</a>
-              </div>
-            </div>
-          </div>
-          <div class="producto">
-            <img src="img/producto4.jpg" alt="producto 1" />
+        </div>
+        
+        <div class="producto">
+            <img src="img/producto3.jpg" alt="producto 1" />
             <div class="texto-producto">
-              <h3>Producto 4</h3>
+              <h3>Producto 3</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
                 doloremque modi quo aliquam impedit, reiciendis provident
@@ -115,7 +101,20 @@
               <p class="precio">$1,000.00</p>
               <a class="btn" href="#">Agregar al carrito</a>
             </div>
+        </div>
+   
+        <div class="producto">
+          <img src="img/producto4.jpg" alt="producto 1" />
+          <div class="texto-producto">
+            <h3>Producto 4</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+              doloremque modi quo aliquam impedit, reiciendis provident
+            </p>
+            <p class="precio">$1,000.00</p>
+            <a class="btn" href="#">Agregar al carrito</a>
           </div>
+        </div>
 
          <div class="producto">
           <img src="img/producto5.jpg" alt="producto 1" />
@@ -145,35 +144,39 @@
       </div>
     </main>
 
-    <footer>
-      <div>
-        <h3>Categorias</h3>
-        <nav>
-          <a href="">Cocina</a>
-          <a href="">Oficina</a>
-          <a href="">Jardin</a>
-          <a href="">Cochera</a>
-          <a href="">Dormitorios</a>
-        </nav>
+    <footer class="site-footer">
+      <div class="grid-footer contenedor">
+
+        <div>
+          <h3>Categorias</h3>
+          <nav class="footer-menu">
+            <a href="">Cocina</a>
+            <a href="">Oficina</a>
+            <a href="">Jardin</a>
+            <a href="">Cochera</a>
+            <a href="">Dormitorios</a>
+          </nav>
+        </div>
+        <div>
+          <h3>Sobre nosotros</h3>
+          <nav class="footer-menu">
+            <a href="">Nuestra historía</a>
+            <a href="">Misión, Visíon y Valores</a>
+            <a href="">Carreras</a>
+            <a href="">Políticas de Privacidad</a>
+            <a href="">Terminos del servicio</a>
+          </nav>
+        </div>
+        <div>
+          <h3>Soporte</h3>
+          <nav class="footer-menu">
+            <a href="">Preguntas Frecuentes</a>
+            <a href="">Ayuda en line</a>
+            <a href="">Confianza y seguridad</a>
+          </nav>
+        </div>
       </div>
-      <div>
-        <h3>Sobre nosotros</h3>
-        <nav class="navegacion">
-          <a href="">Nuestra historía</a>
-          <a href="">Misión, Visíon y Valores</a>
-          <a href="">Carreras</a>
-          <a href="">Políticas de Privacidad</a>
-          <a href="">Terminos del servicio</a>
-        </nav>
-      </div>
-      <div>
-        <h3>Soporte</h3>
-        <nav class="navegacion">
-          <a href="">Preguntas Frecuentes</a>
-          <a href="">Ayuda en line</a>
-          <a href="">Confianza y seguridad</a>
-        </nav>
-      </div>
+      <p class="reserv"> Dev: Javier Balcazar Cruz</p>
     </footer>
   </body>
 </html>
