Se termino el apartado (Nosotros, Tienda, Blog, Galeria), Contancto queda pendiente, se construyo el formulario falta aplicar estilos

--- a/base.html
+++ b/base.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nosotros</title>
+    <title>Tienda de muebles</title>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
@@ -29,31 +26,15 @@
       </nav>
     </div>
 
+
     <main class="contenido-principal contenedor">
-      <h2 class="text-center">Sobre Nosotros</h2>
-      <div class="contenido-nosotros">
-        <div class="imagen">
-          <img src="img/nosotros.jpg" alt="Nosotros" />
-        </div>
-        <div class="informacion-nosotros">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-            consectetur accusantium ut amet quaerat laboriosam vitae quasi minus
-            perspiciatis dolores fuga repudiandae doloribus natus nisi aliquam
-            ipsum rerum, sit quae.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quos
-            qui cum voluptas repudiandae asperiores consequatur dolore, optio
-            sapiente doloremque distinctio maiores minus commodi a possimus
-            nisi, quasi quaerat placeat?
-          </p>
-        </div>
-      </div>
-    </main>
+      <h2 class="text-center">Nombre Pagina</h2>
+    
+    </main>>
 
     <footer class="site-footer">
       <div class="grid-footer contenedor">
+
         <div>
           <h3>Categorias</h3>
           <nav class="footer-menu">
@@ -83,7 +64,7 @@
           </nav>
         </div>
       </div>
-      <p class="reserv">Dev: Javier Balcazar Cruz</p>
+      <p class="reserv"> Dev: Javier Balcazar Cruz</p>
     </footer>
   </body>
 </html>
