--- a/entrada.html
+++ b/entrada.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nosotros</title>
+    <title>Tienda de muebles</title>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css" />
   </head>
   <body>
@@ -29,31 +26,31 @@
       </nav>
     </div>
 
+
     <main class="contenido-principal contenedor">
-      <h2 class="text-center">Sobre Nosotros</h2>
-      <div class="contenido-nosotros">
-        <div class="imagen">
-          <img src="img/nosotros.jpg" alt="Nosotros" />
-        </div>
-        <div class="informacion-nosotros">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-            consectetur accusantium ut amet quaerat laboriosam vitae quasi minus
-            perspiciatis dolores fuga repudiandae doloribus natus nisi aliquam
-            ipsum rerum, sit quae.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quos
-            qui cum voluptas repudiandae asperiores consequatur dolore, optio
-            sapiente doloremque distinctio maiores minus commodi a possimus
-            nisi, quasi quaerat placeat?
-          </p>
-        </div>
-      </div>
+      <h2 class="text-center">Entrada blog</h2>
+      <article class="entrada contenido-entrada-blog">
+        <header>
+            <h2> Guia de colores</h2>
+            <div class="imagen">
+                <img src="img/nosotros.jpg" alt="blog">
+            </div>
+            <div class="entrada-meta">
+                <p> Fecha:<span class=""> 1 de Agosto 2022</span></p>
+                <p> Escrito por:<span class=""> Tienda Muebles</span></p>
+            </div>
+            <div class="entrada-blog">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dolores earum ut officiis dolorem exercitationem nisi neque fuga, illo pariatur, repellat deserunt sunt odit sit sint error animi nemo consequuntur?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum dolores earum ut officiis dolorem exercitationem nisi neque fuga, illo pariatur, repellat deserunt sunt odit sit sint error animi nemo consequuntur?</p>
+           
+            </div>
+        </header>
+    </article>
     </main>
 
     <footer class="site-footer">
       <div class="grid-footer contenedor">
+
         <div>
           <h3>Categorias</h3>
           <nav class="footer-menu">
@@ -83,7 +80,7 @@
           </nav>
         </div>
       </div>
-      <p class="reserv">Dev: Javier Balcazar Cruz</p>
+      <p class="reserv"> Dev: Javier Balcazar Cruz</p>
     </footer>
   </body>
 </html>
