--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="nosotros.html">Nosotros</a>
         <a href="tienda.html">Tienda</a>
         <a href="blog.html">Blog</a>
-        <a href="galería">Galería</a>
+        <a href="galeria.html">Galería</a>
         <a href="contacto.html">Contacto</a>
       </nav>
     </div>
