Maquetado completo al 100%

--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
 
     <main class="contenido-principal contenedor">
       <h2 class="text-center">Contacto</h2>
-      <form>
+      <form class="formulario">
         <fieldset>
             <legend>Tus datos</legend>
             <div class="campo">
@@ -43,11 +43,11 @@
             </div>
             <div class="campo">
                 <label for="email">Email</label>
-                <input id="email type="email" placeholder="Email" >
+                <input id="email" type="email" placeholder="Email" >
             </div>
             <div class="campo">
                 <label for="tel">Teléfono</label>
-                <input id="tel" type="tel" placeholder="Tú teléfono"
+                <input id="tel" type="tel" placeholder="Tú teléfono">
             </div>  
             <div class="campo">
                 <label for="date">Fecha</label>
@@ -95,7 +95,7 @@
             </datalist>
         </div>
     </fieldset>
-    <input type="submit" value="Enviar formulario">
+    <input type="submit" class="btn" value="Enviar formulario">
     </form>
     
     </main>
