--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,7 @@
         </aside>
       </section>
     
-    </main>>
+    </main>
 
     <footer class="site-footer">
       <div class="grid-footer contenedor">
