--- a/galeria.html
+++ b/galeria.html
@@ -76,7 +76,7 @@
                 </a>
             </li>
         </ul>
-    </main>>
+    </main>
 
     <footer class="site-footer">
       <div class="grid-footer contenedor">
